Downloaded the pretrained model

--- a/notebooks/1.0-jpp-download-data.ipynb
+++ b/notebooks/1.0-jpp-download-data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "28b90d76",
+   "id": "435ae2b7",
    "metadata": {},
    "source": [
     "# Download the data from Kaggle"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "87b0a338",
+   "id": "fd8f2595",
    "metadata": {},
    "source": [
     "## Import the necessary packages and setting things up"
@@ -19,7 +19,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "1aa28bac",
+   "id": "1ab39930",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "01955ed9",
+   "id": "a4d36fdf",
    "metadata": {},
    "source": [
     "## Setting up the path to store the data"
@@ -40,7 +40,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "0feb2cae",
+   "id": "88a06ebb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,16 +50,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "70ff4506",
+   "id": "39c42192",
    "metadata": {},
    "source": [
-    "## Downloading and extracting the datafiles"
+    "## Downloading and extracting the zipfile"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "c2615e5f",
+   "id": "a5b69fc5",
    "metadata": {},
    "outputs": [
     {
