Added codes to create the necessary dirs

--- a/notebooks/1.0-jpp-download-data.ipynb
+++ b/notebooks/1.0-jpp-download-data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "435ae2b7",
+   "id": "49443e0c",
    "metadata": {},
    "source": [
     "# Download the data from Kaggle"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fd8f2595",
+   "id": "98e510f9",
    "metadata": {},
    "source": [
     "## Import the necessary packages and setting things up"
@@ -19,7 +19,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "1ab39930",
+   "id": "a6199364",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a4d36fdf",
+   "id": "e179ef32",
    "metadata": {},
    "source": [
     "## Setting up the path to store the data"
@@ -40,17 +40,18 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "88a06ebb",
+   "id": "3acd169a",
    "metadata": {},
    "outputs": [],
    "source": [
     "dataset_dir = REPO_ROOT_DIR + 'data/raw'\n",
+    "os.makedirs(dataset_dir)\n",
     "fname = os.path.join(dataset_dir, \"FFHQ.zip\") "
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "39c42192",
+   "id": "4810c2e7",
    "metadata": {},
    "source": [
     "## Downloading and extracting the zipfile"
@@ -59,7 +60,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "a5b69fc5",
+   "id": "f188f05e",
    "metadata": {},
    "outputs": [
     {
