--- a/notebooks/1.0-jpp-download-pretrained.ipynb
+++ b/notebooks/1.0-jpp-download-pretrained.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "1c8f1216",
+   "id": "cda65379",
    "metadata": {},
    "source": [
     "# Download the pretrained model from Kaggle"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5aa99283",
+   "id": "e2caec1b",
    "metadata": {},
    "source": [
     "## Import the necessary packages and setting things up"
@@ -19,7 +19,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "91812ba2",
+   "id": "724750d8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "43123b77",
+   "id": "67757b3e",
    "metadata": {},
    "source": [
     "## Setting up the path to store the pretrained model"
@@ -40,17 +40,18 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "fa5ca914",
+   "id": "0fbcf787",
    "metadata": {},
    "outputs": [],
    "source": [
     "model_dir = REPO_ROOT_DIR + 'models'\n",
+    "os.makedirs(model_dir)\n",
     "fname = os.path.join(model_dir, \"model.zip\") "
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "5b919341",
+   "id": "f0f418f8",
    "metadata": {},
    "source": [
     "## Downloading and extracting the zipfile"
@@ -59,7 +60,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "1273bf44",
+   "id": "e88657b5",
    "metadata": {},
    "outputs": [
     {
