--- a/notebooks/1.0-jpp-stylegan.ipynb
+++ b/notebooks/1.0-jpp-stylegan.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "b1b81406",
+   "id": "60d3ee91",
    "metadata": {},
    "source": [
     "# StyleGAN Demonstration"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fba8644b",
+   "id": "7549e9aa",
    "metadata": {},
    "source": [
     "## Importing the necessary packages and setting things up"
@@ -19,7 +19,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "e98d7e4b",
+   "id": "50ef8b17",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "434bfc48",
+   "id": "eb02c876",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cb3b32a0",
+   "id": "8152908d",
    "metadata": {},
    "source": [
     "### Setting up Pytorch to use the GPU"
@@ -56,7 +56,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "0fba55eb",
+   "id": "c40feaed",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2fbdbf22",
+   "id": "952eecde",
    "metadata": {},
    "source": [
     "## Defining the model"
@@ -74,7 +74,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "5a39e599",
+   "id": "4804d635",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "702fad88",
+   "id": "3cc4b3ea",
    "metadata": {},
    "source": [
     "### Loading the pretrained model"
@@ -95,7 +95,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "3cd6e1d2",
+   "id": "aa4e8c1b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,7 +106,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "9a080273",
+   "id": "0833f5a3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "91b4a4c9",
+   "id": "86bc1904",
    "metadata": {},
    "source": [
     "## Input definition"
@@ -125,7 +125,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "8397cf3b",
+   "id": "635e2321",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -136,7 +136,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "018c9af1",
+   "id": "a12c828a",
    "metadata": {},
    "source": [
     "### Latent space"
@@ -145,7 +145,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "4331653b",
+   "id": "10989b4e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -154,7 +154,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "44f52c84",
+   "id": "105c5043",
    "metadata": {},
    "source": [
     "## Generating some faces"
@@ -163,7 +163,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "0d09a4bf",
+   "id": "e6bc260a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -176,7 +176,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "251a8c91",
+   "id": "cf944a4e",
    "metadata": {},
    "source": [
     "## Displaying what was generated"
@@ -185,7 +185,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "1f8e8750",
+   "id": "cac3c20d",
    "metadata": {},
    "outputs": [
     {
@@ -208,7 +208,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "76e74d35",
+   "id": "35f01a2b",
    "metadata": {},
    "source": [
     "### Generating five sets of nine images and saving them"
@@ -217,17 +217,19 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "39d23623",
+   "id": "fb77baa6",
    "metadata": {},
    "outputs": [],
    "source": [
-    "fig_path = REPO_ROOT_DIR + 'figures/face-set-'"
+    "fig_dir = os.path.join(REPO_ROOT_DIR, 'figures')\n",
+    "os.makedirs(fig_dir)\n",
+    "fig_name = fig_dir + 'face-set-'"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "b0fbf053",
+   "id": "fee0c40f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -244,14 +246,14 @@
     "    fig, ax = plt.subplots(figsize=(5,5),tight_layout=True)\n",
     "    ax.imshow(imgs.permute(1,2,0).detach().numpy())\n",
     "    ax.axis('off')\n",
-    "    fig_name = fig_path + str(i) + '.pdf'\n",
+    "    fig_name = fig_name + str(i) + '.pdf'\n",
     "    fig.savefig(fig_name)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "326474ff",
+   "id": "41851c92",
    "metadata": {},
    "outputs": [],
    "source": []
