Updated the images that were generated

--- a/notebooks/1.0-jpp-download-data.ipynb
+++ b/notebooks/1.0-jpp-download-data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "49443e0c",
+   "id": "d55c1c20",
    "metadata": {},
    "source": [
     "# Download the data from Kaggle"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "98e510f9",
+   "id": "36b489c3",
    "metadata": {},
    "source": [
     "## Import the necessary packages and setting things up"
@@ -19,7 +19,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "a6199364",
+   "id": "d1db4bd5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e179ef32",
+   "id": "29d61ec9",
    "metadata": {},
    "source": [
     "## Setting up the path to store the data"
@@ -40,18 +40,18 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "3acd169a",
+   "id": "eac53da0",
    "metadata": {},
    "outputs": [],
    "source": [
     "dataset_dir = REPO_ROOT_DIR + 'data/raw'\n",
-    "os.makedirs(dataset_dir)\n",
+    "os.makedirs(dataset_dir, exist_ok=True)\n",
     "fname = os.path.join(dataset_dir, \"FFHQ.zip\") "
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "4810c2e7",
+   "id": "fa90baca",
    "metadata": {},
    "source": [
     "## Downloading and extracting the zipfile"
@@ -60,7 +60,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "f188f05e",
+   "id": "9aeac435",
    "metadata": {},
    "outputs": [
     {
