--- a/notebooks/1.0-jpp-download-pretrained.ipynb
+++ b/notebooks/1.0-jpp-download-pretrained.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "cda65379",
+   "id": "75522423",
    "metadata": {},
    "source": [
     "# Download the pretrained model from Kaggle"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e2caec1b",
+   "id": "e6bfb30d",
    "metadata": {},
    "source": [
     "## Import the necessary packages and setting things up"
@@ -19,7 +19,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "724750d8",
+   "id": "ff150e3a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "67757b3e",
+   "id": "cb8551bf",
    "metadata": {},
    "source": [
     "## Setting up the path to store the pretrained model"
@@ -40,18 +40,18 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "0fbcf787",
+   "id": "9f74e7f3",
    "metadata": {},
    "outputs": [],
    "source": [
     "model_dir = REPO_ROOT_DIR + 'models'\n",
-    "os.makedirs(model_dir)\n",
+    "os.makedirs(model_dir, exist_ok=True)\n",
     "fname = os.path.join(model_dir, \"model.zip\") "
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "f0f418f8",
+   "id": "4bbce881",
    "metadata": {},
    "source": [
     "## Downloading and extracting the zipfile"
@@ -60,7 +60,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "e88657b5",
+   "id": "89cb856f",
    "metadata": {},
    "outputs": [
     {
