--- a/notebooks/1.0-jpp-download-pretrained.ipynb
+++ b/notebooks/1.0-jpp-download-pretrained.ipynb
@@ -44,7 +44,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model_dir = REPO_ROOT_DIR + 'models'\n",
+    "model_dir = REPO_ROOT_DIR + 'models/'\n",
     "os.makedirs(model_dir, exist_ok=True)\n",
     "fname = os.path.join(model_dir, \"model.zip\") "
    ]
