--- a/notebooks/1.0-jpp-download-data.ipynb
+++ b/notebooks/1.0-jpp-download-data.ipynb
@@ -44,7 +44,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dataset_dir = REPO_ROOT_DIR + 'data/raw'\n",
+    "dataset_dir = REPO_ROOT_DIR + 'data/raw/'\n",
     "os.makedirs(dataset_dir, exist_ok=True)\n",
     "fname = os.path.join(dataset_dir, \"FFHQ.zip\") "
    ]
