--- a/slides/report/slides-projeto-ea979.tex
+++ b/slides/report/slides-projeto-ea979.tex
@@ -40,11 +40,11 @@
 
 \author[João Pedro O. Pagnan]{ \footnotesize
   Aluno: João Pedro de Oliveira Pagnan\\
-  Professor: Prof. Dr. José Wilson Magalhães Bassani [CEB/UNICAMP]\\\medskip
+  Professora: Profa. Dra. Paula Dornhofer Paro Costa  [FEEC/UNICAMP]\\\medskip
   }
 
 \institute[]{Universidade Estadual de Campinas - Faculdade de Engenharia Elétrica e Computação\\
-  EA997 - Introdução à Engenharia Biomédica \\
+  EA979 - Introdução à Computação Gráfica e ao Processamento de Imagem \\
   }
 
 \date{\scriptsize \today}
@@ -67,7 +67,7 @@
     \justifying 
     \indent
     
-    \indent{O diagnóstico de arritmias cardíacas através de sinais de eletrocardiograma (ECG) é de extrema importância para monitorar a saúde do coração através de um método não invasivo \cite{moody2001impact}. Devido a isso, uma boa etapa de interpretação de sinais computadorizados de ECG é fundamental para que o diagnóstico seja feito de forma precisa e, caso exista, a arritmia cardíaca seja detectada corretamente.}
+    \indent{}
 
 \end{frame}
     
