Worked on the slides

--- a/slides/report/slides-projeto-ea979.tex
+++ b/slides/report/slides-projeto-ea979.tex
@@ -61,16 +61,33 @@
 \end{frame}
 
 \section{Introdução}
-\subsection{Identificação de doenças cardiovasculares com ferramentas de IA}
 \begin{frame}
-    \frametitle{Introdução}
+	\frametitle{Introdução}
+	\justifying
+	
+	\indent{Com o crescimento do poderio computacional nos últimos anos, em especial, das placas de vídeo, o uso e a popularidade de modelos com redes neurais artificiais em tarefas de aprendizado de máquina, como predição, classificação, regressão etc., aumentou de maneira considerável.}
+	
+	\indent{Uma arquitetura de rede neural que ficou bastante conhecida foi as rede neural adversária generativa. Apresentada originalmente em 2014 por Ian Goodfellow e os outros membros do seu grupo de pesquisa \cite{goodfellow2014generative}, este modelo é capaz de, após um treinamento em um conjunto de dados, gerar novas amostras com os mesmos parâmetros das que foram utilizados para treinar a rede.}
+	
+	\indent{Este tipo de rede neural é bastante utilizado, por exemplo, em tarefas de computação gráfica, sendo possível gerar fotos de rostos humanos, de animais, de artes, dentre vários outros exemplos.}	
+	
+\end{frame}
+
+\section{Objetivo do projeto}
+\begin{frame}
+    \frametitle{Objetivo do projeto}
     \justifying 
-    \indent
     
-    \indent{}
+    \indent{Este projeto tem como objetivo implementar um modelo de rede neural adversário generativo de forma a estudar esta maneira de se realizar computação gráfica.}
 
 \end{frame}
-    
+
+\section{O que são redes neurais?}
+\begin{frame}
+	\frametitle{O que são redes neurais?}
+	\justifying
+\end{frame}
+
 \appendix
 
 \begin{frame}{Referências}
