--- a/slides/report/bib.bib
+++ b/slides/report/bib.bib
@@ -12,3 +12,11 @@
   volume={27},
   year={2014}
 }
+
+@inproceedings{karras2019style,
+  title={A style-based generator architecture for generative adversarial networks},
+  author={Karras, Tero and Laine, Samuli and Aila, Timo},
+  booktitle={Proceedings of the IEEE/CVF conference on computer vision and pattern recognition},
+  pages={4401--4410},
+  year={2019}
+}
