--- a/slides/report/slides-projeto-ea979.tex
+++ b/slides/report/slides-projeto-ea979.tex
@@ -69,7 +69,7 @@
 	
 	\indent{Com o crescimento do poderio computacional nos últimos anos, em especial, das placas de vídeo, o uso e a popularidade de modelos com redes neurais artificiais em tarefas de aprendizado de máquina, como predição, classificação, regressão etc., aumentou de maneira considerável.}
 	
-	\indent{Uma arquitetura de rede neural que ficou bastante conhecida foi a rede neural adversária generativa. Apresentada originalmente em 2014 por Ian Goodfellow e os outros membros do seu grupo de pesquisa \cite{goodfellow2014generative}, este modelo é capaz de, após um treinamento em um conjunto de dados, gerar novas amostras com os mesmos parâmetros que foram utilizados para treinar a rede.}
+	\indent{Uma arquitetura de rede neural que ficou bastante conhecida foi a rede neural adversária generativa. Apresentada originalmente em 2014 por Ian Goodfellow e os outros membros do seu grupo de pesquisa \cite{goodfellow2014generative}, este modelo é capaz de, após um treinamento em um conjunto de dados, gerar novas amostras com os mesmos parâmetros das imagens que foram utilizados para treinar a rede.}
 	
 	\indent{Este tipo de rede neural é bastante utilizado, por exemplo, em tarefas de computação gráfica, sendo possível gerar fotos de rostos humanos, de animais, de artes, dentre vários outros exemplos.}	
 	
