Updated the slides

--- a/slides/report/slides-projeto-ea979.tex
+++ b/slides/report/slides-projeto-ea979.tex
@@ -86,8 +86,9 @@
     
     \indent{O modelo a ser implementado é a StyleGAN \cite{karras2019style}, apresentada em 2018 pelo NVlabs.}
     
-    \indent{Esta GAN tornou-se famosa por causa do site }
-
+    \indent{Esta GAN tornou-se famosa por conta do site \href{www.thispersondoesnotexist.com}{www.thispersondoesnotexist.com} que exibe faces humanas geradas sinteticamente e por conta da popularidade que \textit{deep fakes} ganharam nos últimos anos.}
+    
+    
 \end{frame}
 
 \section{O que são redes neurais?}
