Updated the slides

--- a/slides/report/slides-projeto-ea979.tex
+++ b/slides/report/slides-projeto-ea979.tex
@@ -88,12 +88,13 @@
     
     \indent{Esta GAN tornou-se famosa por conta do site \href{www.thispersondoesnotexist.com}{www.thispersondoesnotexist.com} que exibe faces humanas geradas sinteticamente e por conta da popularidade que \textit{deep fakes} ganharam nos últimos anos.}
     
+    \indent{Mas, antes de falar sobre o projeto, convém explicar o que são redes neurais artificiais.}
     
 \end{frame}
 
 \section{O que são redes neurais?}
 \begin{frame}
-	\frametitle{O que são redes neurais?}
+	\frametitle{O que são redes neurais artificiais?}
 	\justifying
 \end{frame}
 
